@@ -48,7 +48,12 @@ feed2 application/rss+xml x
 feed.atom application/atom+xml
 feeds.opml text/x-opml+xml
 subtitle.srt application/x-subrip
+# Copied from http://msdn2.microsoft.com/en-us/library/ms971327.aspx
 subtitle.smi application/x-sami x
+# Copied from http://www1.mplayerhq.hu/MPlayer/samples/sub/Lola.sub/Run.Lola.Run.1998.DVDivX-SChiZO.sub
+subtitle-microdvd.sub text/x-microdvd x
+# Copied from http://www1.mplayerhq.hu/MPlayer/samples/sub/manyfmts/FOVH%20MoviePlayer.sub
+subtitle-mpsub.sub text/x-mpsub x
 
 # text
 text-iso8859-15.txt text/plain ox
