@@ -1,0 +1,5 @@
+{823}{883}''We shall not cease from exploration...
+{885}{959}and the end of all our exploring|will be to arrive where we started...
+{961}{1031}and know the place for the first time.''|- T.S. Eliot, ''Little Gidding''
+{1033}{1181}''After the game is before the game.''|- S. Herberger
+{3119}{3175}Man...
