@@ -1,0 +1,20 @@
+TITLE=Project title
+FILE=
+AUTHOR=Project author
+TYPE=VIDEO
+FORMAT=TIME
+NOTE=Project description
+
+1.3 1.6
+- Hall?!
+
+4.8 1.6
+- God morgon.- God morgon.
+
+0.8 1.5
+- Jag ska komma upp.- OK.
+
+0.0 3.1
+- T?nder du lampan.- Ja.
+
+
