@@ -1,5 +1,13 @@
 2007-11-29  Bastien Nocera  <hadess@hadess.net>
 
+	* freedesktop.org.xml.in:
+	* tests/list:
+	* tests/subtitle-microdvd.sub:
+	* tests/subtitle-mpsub.sub:
+	Add MicroDVD and MPSub subtitle formats
+
+2007-11-29  Bastien Nocera  <hadess@hadess.net>
+
 	* freedesktop.org.xml.in: Add SAMI subtitle files, as per:
 	http://msdn2.microsoft.com/en-us/library/ms971327.aspx
 	* tests/: add test copied from the Microsoft website
